--- a/SA2025/SA2025.csproj
+++ b/SA2025/SA2025.csproj
@@ -66,6 +66,8 @@
     <Compile Include="Gemiler.cs" />
     <Compile Include="Oyun.cs" />
     <Compile Include="Oyuncu.cs" />
+    <Compile Include="Patlama.cs" />
+    <Compile Include="Patlamalar.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resim.cs" />
